--- a/Monochrome.htm
+++ b/Monochrome.htm
@@ -38,9 +38,11 @@ DAMAGE.
 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <!--PRE-HEAD-START-->
+<!--{{{-->
 <link rel='alternate' type='application/rss+xml' title='RSS' href='index.xml'/>
+<!--}}}-->
 <!--PRE-HEAD-END-->
-<title> TiddlyWiki - a reusable non-linear personal web notebook </title>
+<title> Monochrome - a theme for TiddlyWiki </title>
 <style type="text/css">
 #saveTest {display:none;}
 #messageArea {display:none;}
@@ -51,10 +53,12 @@ DAMAGE.
 #javascriptWarning {width:100%; text-align:center; font-weight:bold; background-color:#dd1100; color:#fff; padding:1em 0em;}
 </style>
 <!--POST-HEAD-START-->
+
 <!--POST-HEAD-END-->
 </head>
 <body onload="main();" onunload="if(window.checkUnsavedChanges) checkUnsavedChanges(); if(window.scrubNodes) scrubNodes(document.body);">
 <!--PRE-BODY-START-->
+
 <!--PRE-BODY-END-->
 <div id="copyright">
 Welcome to TiddlyWiki created by Jeremy Ruston, Copyright &copy; 2007 UnaMesa Association
@@ -491,7 +495,8 @@ Also see AdvancedOptions</pre>
 </div>
 </div>
 <!--POST-SHADOWAREA-->
-<div id="storeArea"><div title="PageTemplate" modifier="TiddlyThemes" modified="200708091512" created="200701130013" tags="MonochromeTheme">
+<div id="storeArea">
+<div title="PageTemplate" modifier="TiddlyThemes" modified="200708091512" created="200701130013" tags="MonochromeTheme">
 <pre>&lt;div id='header' class='header' macro='gradient vert   #555555       #3b3b3b '&gt;
         &lt;div class='siteTitle' refresh='content' tiddler='SiteTitle'&gt;&lt;/div&gt;
         &lt;span id='topMenu' refresh='content' tiddler='MainMenu'&gt;&lt;/span&gt;
@@ -506,6 +511,296 @@ Also see AdvancedOptions</pre>
 &lt;div id='tiddlerDisplay'&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;!--}}}--&gt;</pre>
+</div>
+<div title="SelectThemePlugin" modifier="YourName" created="201205170005" tags="systemConfig Plugins" changecount="1">
+<pre>/***
+
+''This plugin was previously called StyleChooser.''
+
+|Name|SelectThemePlugin|
+|Created by|SimonBaird and SaqImtiaz|
+|Location|http://lewcid.googlepages.com/lewcid.html#SelectThemePlugin|
+|Version|1.2.3|
+|Requires|~TW2.x|
+!Description
+*An alternative style switcher, can be used to switch just stylesheets and/or pagetemplates, or a combination of both (a theme)
+*you can add your own stylesheets and pagetemplates, or use a ThemePack, like BigThemePack.
+
+!Usage
+* You have to have fetch or create some styleSheets and pageTemplates to use this plugin.
+**You can either get a ThemePack like BigThemePack which automatically adds themes to ThemeSelect.
+**or create tiddlers with styleSheets and pageTemplates and tag them styleSheets and pageTemplates respectively.
+* Put {{{&lt;&lt;themeSelect style 'Select theme'&gt;&gt;}}} in your SideBarOptions.
+
+!Creating Theme Packs
+*You can create your own theme pack if you like. Instructions can be found [[here.|CreateThemePack]]
+
+!History
+* 15-May-06, v1.2.3, added paramifier so you can put theme on url, eg http://www.somewhere.com/twfile.html#theme:Berry2, thanks Clint (Simon).
+* 28-Apr-o6, v1.2.2, fixed bug with opening TW after deleting themepacks. (Saq)
+* 26-Apr-06, v1.2.1, more code optimization, dropdowns now updated on the fly. (Saq)
+* 25-Apr-06, v1.2.0, added 3rd party ThemePack support, and made various other improvements.(Simon &amp; Saq)
+* 24-Apr-06, v1.1.0, added: no styles and default styles options,&lt;&lt;br&gt;&gt;support for ThemePack, support for tag variations(Saq)
+* 21-Apr-06, v1.0.0, Reworked dropdowns to include option for pagetemplates (Saq)
+* 21-Apr-06, v0.9.0, Rewrote and added Saq's lovely dropdown select (Simon)
+* 20-Apr-06, v0.0.1, Basic switcher working (Simon)
+
+!Examples
+|!Source|!Output|h
+|{{{&lt;&lt;themeSelect style&gt;&gt;}}} for a dropdown with StyleSheets|&lt;&lt;themeSelect style&gt;&gt;|
+|{{{&lt;&lt;themeSelect pagetemplate&gt;&gt;}}} for a dropdown with PageTemplates|&lt;&lt;themeSelect pagetemplate&gt;&gt;|
+|{{{&lt;&lt;themeSelect style customlabel&gt;&gt;}}} to use a customlabel|&lt;&lt;themeSelect style customlabel&gt;&gt;|
+* When applying a stylesheet or template, it also looks for a template or stylesheet respectively based on naming convention, eg MyFunkyStyleSheet and MyFunkyPageTemplate.
+
+!Notes
+* See also http://www.tiddlytools.com/#SelectStyleSheetPlugin for a more feature-rich style sheet switcher
+
+! Ideas
+* do ViewTemplate also?
+* Pretty up the [x] bit
+
+!Code
+***/
+//{{{
+// for compatibility with TW &lt;2.0.9
+if (!Array.prototype.contains)
+   Array.prototype.contains = function(item)
+   {
+    return this.find(item) != null;
+    };
+
+// for compatibility with TW &lt;2.0.9
+if (!Array.prototype.containsAny)
+   Array.prototype.containsAny = function(items)
+   {
+    for(var i=0; i&lt;items.length; i++)
+        if (this.contains(items[i]))
+            return true;
+    return false;
+    };
+//}}}
+
+//{{{
+version.extensions.SelectTheme = { major: 1, minor: 2, revision: 3, date: new Date(2006,5,15),
+	source: &quot;http://lewcid.googlepages.com/lewcid.html#SelectTheme&quot;
+};
+
+config.SelectTheme = {
+	things: {
+		style: {
+			tag:        [&quot;StyleSheets&quot;,&quot;StyleSheet&quot;,&quot;styleSheet&quot;,&quot;styleSheets&quot;,&quot;stylesheet&quot;,&quot;stylesheets&quot;],
+			theDefault: &quot;StyleSheet&quot;,
+			suffix:     &quot;StyleSheet&quot;,
+			notify:     refreshStyles,
+			cookie:     &quot;txtStyleSheet&quot;,
+			otherThing: &quot;pagetemplate&quot;,
+			label:      &quot;Choose StyleSheet: &quot;,
+			tooltip:     &quot;Choose a StyleSheet&quot;,
+			caseNone: { text:&quot;None&quot;, title:&quot;NoStyleSheet&quot;},
+                        caseDefault: { text:&quot;Default&quot;, title:&quot;StyleSheet&quot; }
+
+		},
+		pagetemplate: {
+			tag:        [&quot;PageTemplates&quot;,&quot;PageTemplate&quot;,&quot;pageTemplates&quot;,&quot;pageTemplate&quot;,&quot;pagetemplate&quot;,&quot;pagetemplates&quot;],
+			theDefault: &quot;PageTemplate&quot;,
+			suffix:     &quot;PageTemplate&quot;,
+			notify:     refreshPageTemplate,
+			cookie:     &quot;txtPageTemplate&quot;,
+			otherThing: &quot;style&quot;,
+			label: &quot;Choose PageTemplate: &quot;,
+			tooltip:    &quot;Choose a PageTemplate&quot;,
+			caseNone: { text:&quot;None&quot;, title:&quot;NoPageTemplate&quot;},
+                        caseDefault: { text:&quot;Default&quot;, title:&quot;PageTemplate&quot; }
+		}
+
+	},
+
+                         specialCases: [&quot;caseNone&quot;,&quot;caseDefault&quot;]
+
+};
+
+TiddlyWiki.prototype.removeNotification = function(title,fn) {
+	for (var i=0;i&lt;this.namedNotifications.length;i++)
+		if((this.namedNotifications[i].name == title) &amp;&amp; (this.namedNotifications[i].notify == fn))
+			this.namedNotifications.splice(i,1); // counting on it only being there once
+}
+
+
+var things = config.SelectTheme.things;
+var specialCases=config.SelectTheme.specialCases;
+
+for (var t in things) {
+	// make sure we have a value
+	if (!config.options[things[t].cookie])
+		config.options[things[t].cookie] = things[t].theDefault;
+
+	// remove core notify
+	store.removeNotification(things[t].theDefault,things[t].notify);
+
+	// and add our one
+	store.addNotification(config.options[things[t].cookie],things[t].notify);
+
+}
+
+//checks to see if a tiddler exists in store or as a shadow.
+TiddlyWiki.prototype.isTiddler= function (title)
+        {return store.tiddlerExists(title) || store.isShadowTiddler(title)}
+
+//hijack core function &amp; make sure template exists
+window.applyPageTemplate_themeSelect=window.applyPageTemplate;
+window.applyPageTemplate=function(title){
+           if(!store.isTiddler(title))
+                       {title = things.pagetemplate.theDefault;}
+           applyPageTemplate_themeSelect(title);
+ }
+
+TiddlyWiki.prototype.makeActiveTheme = function(what,title,alsoCheckOtherThing) {
+
+	var thing = things[what];
+        if (!store.isTiddler(title))
+		title = thing.theDefault;
+
+	var oldTitle = config.options[thing.cookie];
+
+	if (what == &quot;style&quot;) {
+		// remove old style element from DOM
+		var oldStyleElement = document.getElementById(oldTitle);
+		oldStyleElement.parentNode.removeChild(oldStyleElement);
+	}
+
+	store.removeNotification(oldTitle,thing.notify);
+	store.addNotification(title,thing.notify);
+	store.notify(title);
+
+	config.options[thing.cookie] = title;
+	saveOptionCookie(thing.cookie);
+	if (alsoCheckOtherThing)
+		this.makeActiveTheme(thing.otherThing,
+				title.replace(new RegExp(thing.suffix+&quot;$&quot;),&quot;&quot;) + things[thing.otherThing].suffix,
+						false);
+};
+
+
+config.shadowTiddlers.NoStyleSheet = &quot;&quot;;
+config.shadowTiddlers.NoPageTemplate = config.shadowTiddlers.PageTemplate;
+
+
+function switchTheme(e){
+         if (!e) var e = window.event;
+         var theTarget = resolveTarget(e);
+         var theLink = theTarget;
+         var switchTo= theLink.getAttribute(&quot;switchTo&quot;);
+         var mode = theLink.getAttribute(&quot;mode&quot;);
+         if ((config.options[things[mode].cookie])!=switchTo)
+               {store.makeActiveTheme(mode,switchTo,true);};
+         return(false);
+}
+
+
+config.macros.themeSelect={};
+config.macros.themeSelect.dropdownchar = (document.all?&quot;&#9660;&quot;:&quot;&#9662;&quot;);
+config.macros.themeSelect.handler = function(place,macroName,params,wikifier,paramString,tiddler){
+         var arrow = config.macros.themeSelect.dropdownchar;
+         var mode = params[0];
+         var label = (params[1]?params[1]:things[mode].label) + arrow;
+         var cookie = (config.options[things[mode].cookie]);
+
+         var onclick = function(e)
+             { if (!e) var e = window.event;
+             var popup = Popup.create(this);
+
+             var tagged=[];
+
+	     store.forEachTiddler(function(title,tiddler) {
+                  if ((tiddler.tags).containsAny(things[mode].tag)){
+					tagged.push(tiddler.title);}
+	     });
+
+             //integrate ThemePacks
+	     if (config.themes) {
+		     // see what themes have been loaded...
+		     for (var i=0;i&lt;config.themes.length;i++) {
+			    // see if there is one
+			    var lookForThis = config.themes[i] + things[mode].suffix;
+			    if (store.isShadowTiddler(lookForThis)) {
+				   tagged.pushUnique(lookForThis);
+			    }
+		    }
+		     tagged = tagged.sort();
+             }
+
+             //this function used later to create buttons
+             var createThemeButton = function(switchTo){
+                        var theButton = createTiddlyButton(createTiddlyElement(popup,&quot;li&quot;),text,null,switchTheme,useClass);
+                        theButton.setAttribute(&quot;switchTo&quot;,switchTo);
+                        theButton.setAttribute(&quot;mode&quot;,mode);};
+
+            //create Buttons for None(shadow styles) &amp; Default (StyleSheet)
+                     // Default button is not created if StyleSheet doesnt exist.
+             for(var t=0; t&lt;specialCases.length; t++){
+             var special = specialCases[t];
+             var text = things[mode][special].text;
+             var useClass = &quot;tiddlyLinkExisting&quot;;   //redundant, optimize!
+             if ((things[mode][special].title==cookie)||(special==&quot;caseNone&quot;&amp;&amp;!store.isTiddler(cookie)))
+                      {text+= &quot; [x]&quot;;
+                      useClass = &quot;currentlySelected&quot;;}
+             if (!((special==&quot;caseDefault&quot;)&amp;&amp;(!store.getTiddler(things[mode][special].title))))
+             createThemeButton(things[mode][special].title);     }
+
+             //insert horizontal rule
+             createTiddlyElement(createTiddlyElement(popup,&quot;li&quot;),&quot;hr&quot;);
+
+             //create buttons for all other stylesheet tiddlers
+             for(var t=0; t&lt;tagged.length; t++)
+                     { var useClass = &quot;tiddlyLinkExisting&quot;;
+                       var text = (tagged[t]).replace((things[mode].suffix),&quot;&quot;);
+                     if (tagged[t]==(cookie) )
+                           {text+=&quot; [x]&quot;; useClass=&quot;currentlySelected&quot;;}
+                     if ((tagged[t]!= (things[mode].theDefault))&amp;&amp;tagged[t]!= (things[mode].none))
+                        {createThemeButton(tagged[t]);}}
+             Popup.show(popup,false);
+             e.cancelBubble = true;
+             if (e.stopPropagation)
+                e.stopPropagation();
+             return(false);
+             };
+
+        var createdropperButton = function(place){
+           var sp = createTiddlyElement(place,&quot;span&quot;,null,&quot;ThemeChooserButton&quot;);
+           var theDropDownBtn = createTiddlyButton(sp,label,things[mode].tooltip,onclick);
+        };
+
+        createdropperButton(place);
+};
+
+
+setStylesheet(&quot;.popup li a.currentlySelected {background:#ccc;color:black;font-weight:bold;}&quot;,&quot;currentlySelectedStyle&quot;); // could do better probably...
+
+config.macros.layoutChooser=config.macros.themeSelect;
+
+//shadow tiddler to hold instructions for creating ThemePacks
+config.shadowTiddlers.ThemePack='See http://simonbaird.com/mptw/#CreateThemePack'; 
+
+config.macros.applyTheme = {handler: function (place,macroName,params,wikifier,paramString,tiddler) {
+	var theme = params[0];
+	var label = params[1]?params[1]:'Apply theme &quot;' + theme + '&quot;';
+        var tooltip = 'Apply the &quot;'+theme+'&quot; theme to this TiddlyWiki';
+	createTiddlyButton(place,label,tooltip,function() {
+		store.makeActiveTheme(&quot;style&quot;,theme+things.style.suffix,true);
+	});
+}};
+
+
+// this means you can put #theme:ThemeName in url. suggested by Clint
+config.paramifiers.theme = {
+	onstart: function(themeName) {
+		store.makeActiveTheme(&quot;style&quot;,themeName+config.SelectTheme.things.style.suffix,true);
+	}
+};
+
+//}}}
+
+</pre>
 </div>
 <div title="StyleSheet" modifier="TiddlyThemes" modified="200708091512" created="200701130013" tags="MonochromeTheme">
 <pre>/*{{{*/
@@ -9076,6 +9371,7 @@ if(useJavaSaver)
 //]]>
 </script>
 <!--POST-SCRIPT-START-->
+
 <!--POST-SCRIPT-END-->
 </body>
 </html>
