--- a/C#.html
+++ b/C#.html
@@ -6987,8 +6987,10 @@ config.macros.siteMap = {
 そうはいってもこのグラフ&lt;&lt;sparkline 10 5 8 12 7 9 12 17 20 16 10 12 14 17 12&gt;&gt; はどういったシチュエーションで使えばよいのだろうか？
 </pre>
 </div>
-<div title="StyleSheet" creator="nagase" modifier="nagase" created="201205170112" modified="201205220342" tags="StyleSheet myEmpty" changecount="2">
-<pre></pre>
+<div title="StyleSheet" creator="nagase" modifier="氏名" created="201205170112" modified="201206072342" tags="StyleSheet myEmpty" changecount="3">
+<pre>div[tags~=&quot;welcome&quot;].tiddler .viewer {
+background-color: gainsboro;
+}</pre>
 </div>
 <div title="TabTimeline" creator="nagase" modifier="nagase" created="201205230002" tags="hide TimeJournal myEmpty" changecount="1">
 <pre>&lt;&lt;timeline better:true excludeTag:hide sortBy:modified&gt;&gt;</pre>
@@ -8742,254 +8744,6 @@ This is a link to a [[StyleSheet]] tiddler.
 !!!@@color(RoyalBlue): TODO2 @@
 *
 *
-</pre>
-</div>
-<div title="private void RecvM1_pl(MsgFormat msg)" modifier="nagase" created="201206060415" modified="201206060512" tags="ACU_PAP05A_Draw.cs" changecount="9">
-<pre>&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=2&gt;&lt;b&gt;概要&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-M1:現在温度の読み出し
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=2&gt;&lt;b&gt;呼び出し元&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-しらない。。。
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=2&gt;&lt;b&gt;実装&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-{{{
-//M1:現在温度の読み出し
-private void RecvM1_pl(MsgFormat msg)
-{
-    AddLog(&quot;RCV&quot;, &quot;M1&quot;, msg.RawData);
-
-    List&lt;byte&gt; data = new List&lt;byte&gt;();
-    data.AddRange(AsciiUtils.ToAscii(&quot;M1&quot;));
-    data.Add(0x20);
-    data.Add(0x20);
-    //正
-    if (_NowTemperature &gt;= 0)
-    {
-        data.Add(0x20);
-    }
-    //負
-    else
-    {
-        data.Add(0x2d);
-    }
-    data.AddRange(AsciiUtils.ToAscii(Math.Abs(_NowTemperature) / 100, 2));      //現在温度(上2桁)
-    data.Add(0x2e);
-    data.AddRange(AsciiUtils.ToAscii(Math.Abs(_NowTemperature) % 100, 2));      //現在温度(下2桁)
-
-    if (!this.cbNoCommunication.Checked)
-    {
-        byte[] sendMsg = SetHeader(this.NodeNumber, msg.MsgNumber, data);
-        EnqueueSendData(sendMsg);
-        AddLog(&quot;SND&quot;, &quot;M1&quot;, sendMsg);
-    }
-}
-}}}
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=2&gt;&lt;b&gt;BAKEとの比較&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-* ACU
-| EOT |&gt;| ｱﾄﾞﾚｽ |&gt;| 識別子 | ENQ | STX |&gt;| 識別子 |&gt;|&gt;|&gt;|&gt;|&gt;|&gt;|&gt;| データ | ETX | BCC |
-| 0x04 | 0x30 | 0x35 | M | 1 | 0x05 | 0x02 | M | 1 | 0x20 | 0x20 | 0x20 | 0x31 | 0x32 | 0x2E | 0x33 | 0x34 | 0x03 | 0x75 |
-
-* BAKE
-| EOT |&gt;| ｱﾄﾞﾚｽ |&gt;| ﾒﾓﾘｴﾘｱ |&gt;| 識別子 | ENQ | STX |&gt;| 識別子 |&gt;|&gt;|&gt;|&gt;|&gt;|&gt;|&gt;|&gt;|&gt;| データ | ｶﾝﾏ |
-| 0x04 | 0x30 | 0x30 | 0x4B | 0x31 | M | 1 | 0x05 | 0x02 | M | 1 | 0x30 | 0x31 | 0x20 | 0x20 | 0x20 | 0x30 | 0x39 | 0x39 | 0x2E | 0x30 | 0x2C |
-</pre>
-</div>
-<div title="private void RecvMsgProc()" modifier="nagase" created="201206060132" modified="201206060143" tags="ACU_PAP05A_Draw.cs cpy" changecount="3">
-<pre>&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;概要&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-BAKEの温調機に流用する
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;呼び出し元&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-しらない。。。
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;実装&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-{{{
-/// &lt;summary&gt;
-/// メッセージ受信処理
-/// &lt;/summary&gt;
-private void RecvMsgProc()
-{
-    lock (this._AnalysingLock)
-    {
-        // メッセージ受信
-        MsgFormat msg = RecvMsg();
-
-        //MsgFormat msg = ExpandMsg(recvMsg);
-
-        if (msg == null) { return; }
-
-/* ここからHPに使えそう。ぱくる */ 
-       //セレクティング　　　
-        if (msg.Protocol == true)
-        {
-            //コマンド判定
-            switch (AsciiUtils.ToString(msg.RawData, 4, 2))
-            {
-                case &quot;S1&quot;: RecvS1_sl(msg); break;
-                case &quot;S5&quot;: RecvS5_sl(msg); break;
-                case &quot;JO&quot;: RecvJO_sl(msg); break;
-                default:
-                    AddLog(&quot;RCV&quot;, &quot;不明なコマンド&quot;, msg.RawData);
-                    return;
-            }
-        }
-        //ポーリング
-        else
-        {
-            //コマンド判定
-            switch (AsciiUtils.ToString(msg.MsgData, 0, 2))
-            {
-                case &quot;M1&quot;: RecvM1_pl(msg); break;
-                case &quot;M5&quot;: RecvM5_pl(msg); break;
-                case &quot;S1&quot;: RecvS1_pl(msg); break;
-                case &quot;S5&quot;: RecvS5_pl(msg); break;
-                case &quot;JO&quot;: RecvJO_pl(msg); break;
-                case &quot;ER&quot;: RecvER_pl(msg); break;
-                case &quot;M2&quot;: RecvM2_pl(msg); break;
-                default:
-                    AddLog(&quot;RCV&quot;, &quot;不明なコマンド&quot;, msg.RawData);
-                    return;
-            }
-        }
-/* ここまでHPに使えそう。ぱくる */
-
-        SendNextMsg();
-
-        this.RefreshEvent.Set();    //描画リフレッシュ
-    }
-}
-}}}</pre>
-</div>
-<div title="public ACU_PAP05A_Draw()" modifier="nagase" created="201206060127" modified="201206060133" tags="ACU_PAP05A_Draw.cs" changecount="2">
-<pre>&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;概要&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-しらない。。。
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;呼び出し元&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-しらない。。。
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;実装&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-{{{
-public ACU_PAP05A_Draw()
-{
-    InitializeComponent();
-
-    base.CyclicFlag = true;
-
-    base.SymbolType = &quot;ACUコントローラ(PAP05A)&quot;;
-    base.Category = &quot;温調器&quot;;
-
-    #region 初期化
-
-    this.RecvMsgDevice = new DeviceFormat(&quot;KM3000&quot;, 512, IoType.In, SetType.Word);
-    this.RecvNumDevice = new DeviceFormat(&quot;KM3600&quot;, 1, IoType.In, SetType.Word);
-    this._RecvFlagDevice = new DeviceFormat(&quot;KM3601.1&quot;, 1, IoType.In, SetType.Bit);
-    this.SendMsgDevice = new DeviceFormat(&quot;KM1000&quot;, 512, IoType.Io, SetType.Word);
-    this.SendNumDevice = new DeviceFormat(&quot;KM1600&quot;, 1, IoType.Io, SetType.Word);
-    this._SendFlagDevice = new DeviceFormat(&quot;KM1601.1&quot;, 1, IoType.Io, SetType.Bit);
-    this.NodeNumber = 1;
-    this.NowTemperature = new DeviceFormat(&quot;KM0&quot;, 1, IoType.Out, SetType.Word);
-    this.NowHumidity = new DeviceFormat(&quot;KM1&quot;, 1, IoType.Out, SetType.Word);
-               
-    this._IsByteCount = true;
-    this._Sending = false;
-
-    #endregion
-}
-
-#endregion
-
-const int       MAX_LOG = 100;
-const int       MSG_DATA_LENGTH = 8;    //メッセージのデータ長
-
-DeviceFormat    _RecvFlagDevice;
-DeviceFormat    _SendFlagDevice;
-bool            _IsByteCount;
-
-object          _AnalysingLock = new object();
-Queue&lt;byte[]&gt;   _SendQueue = new Queue&lt;byte[]&gt;();
-bool            _Sending;
-object          _SendQueueLock = new object();
-
-ThermoSetting   _Setting = new ThermoSetting();
-ThermoStatus    _Status = new ThermoStatus();
-
-public AutoResetEvent RefreshEvent = new AutoResetEvent(false);
-
-List&lt;string&gt; _LogMessage = new List&lt;string&gt;();
-
-Log_Form LogForm;
-bool LogFormIsShow = false;
-}}}</pre>
-</div>
-<div title="public int _NowTemperature" modifier="nagase" created="201206060132" modified="201206060134" tags="ACU_PAP05A_Draw.cs" changecount="3">
-<pre>&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;概要&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-しらない。。。
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;呼び出し元&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-しらない。。。
-public ACU_PAP05A_Draw()より下にあった
-&lt;html&gt;
-&lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
-&lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;実装&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
-&lt;/div&gt;
-&lt;/html&gt;
-{{{
-//現在温度
-private int _nowTemperature;
-public int _NowTemperature
-{
-    get
-    {
-        return _nowTemperature;
-    }
-    set
-    {
-        _nowTemperature = value;
-
-        base.SetDeviceData(this.NowTemperature.Address, (ushort)_nowTemperature);
-    }
-}
-}}}
 </pre>
 </div>
 <div title="いろいろさんこう" modifier="nagase" created="201205290815" changecount="1">
