--- a/default_tiddler.html
+++ b/default_tiddler.html
@@ -507,13 +507,13 @@ Also see [[AdvancedOptions]]</pre>
 </div>
 <!--POST-SHADOWAREA-->
 <div id="storeArea">
-<div title="&quot;BAKEめも書き&quot;について" creator="nagase" modifier="nagase" created="201204200708" modified="201205220716" changecount="5">
+<div title="&quot;Template&quot;について" creator="nagase" modifier="氏名" created="201204200708" modified="201207222339" changecount="6">
 <pre>&lt;html&gt;
 &lt;div style=&quot;border:1px White; padding:5px;background-color: #DCDCDC;&quot;&gt;
 &lt;span style=&quot;color:#000000&quot;&gt;&lt;font size=3&gt;&lt;b&gt;概要&lt;/b&gt;&lt;/fontsize&gt;&lt;/span&gt;
 &lt;/div&gt;
 &lt;/html&gt;
-このwikiはBAKEに関する覚書きです。。。</pre>
+概要を書く</pre>
 </div>
 <div title="'Pagewise' list all Tiddlers (10 Tiddlers per page, with page up/down buttons)" modifier="nagase" created="201205240710" tags="ForEachTiddlerMacro beginEndNoneExample contextVariableExample countVariableExample indexVariableExample scriptClauseExample writeActionExample myEmpty" changecount="1">
 <pre>With a little scripting you can use the ForEachTiddlerPlugin to display the result &quot;by pages&quot;. I.e. you don't display the full result list, but (e.g.) 10 at a time. 
@@ -635,13 +635,9 @@ ToggleSideBarMacro 1.0 by Saq Imtiaz
 0.9 beta 1; TW 2.4.1 {{ds{2008-08-18}}}
 </pre>
 </div>
-<div title="ActivityReport" creator="nagase" modifier="nagase" created="201205222352" modified="201206040253" tags="TimeJournal log myEmpty task" changecount="6">
+<div title="ActivityReport" creator="nagase" modifier="氏名" created="201205222352" modified="201207230003" tags="TimeJournal log myEmpty task" changecount="7">
 <pre>|//Date//|//Description//|//Started//|//Stopped//|//Elapsed//|
 |2008-08-18|First|02:47:04|02:47:10|00:00:06|
-|2012-05-28|温調との通信が始まらない原因追究|10:29:38|10:31:36|00:01:57|
-|2012-05-29|ﾃｽﾄ用ﾃﾞｰﾀ作成ﾂｰﾙ概要設計|10:17:36|10:24:05|00:06:29|
-|2012-05-29|詳細設計|10:26:06|11:21:51|00:55:45|
-|2012-06-04|ローカルシミュレータのデータ作成|08:49:32|11:53:43|03:04:10|
 /%tasktimer%/
 </pre>
 </div>
@@ -6732,8 +6728,10 @@ config.macros.siteMap = {
 そうはいってもこのグラフ&lt;&lt;sparkline 10 5 8 12 7 9 12 17 20 16 10 12 14 17 12&gt;&gt; はどういったシチュエーションで使えばよいのだろうか？
 </pre>
 </div>
-<div title="StyleSheet" creator="nagase" modifier="nagase" created="201205170112" modified="201205220342" tags="StyleSheet myEmpty" changecount="2">
-<pre></pre>
+<div title="StyleSheet" creator="nagase" modifier="氏名" created="201205170112" modified="201207222341" tags="StyleSheet myEmpty" changecount="3">
+<pre>div[tags~=&quot;welcome&quot;].tiddler .viewer {
+background-color: gainsboro;
+}</pre>
 </div>
 <div title="TabTimeline" creator="nagase" modifier="nagase" created="201205230002" tags="hide TimeJournal myEmpty" changecount="1">
 <pre>&lt;&lt;timeline better:true excludeTag:hide sortBy:modified&gt;&gt;</pre>
